# fuck-delete-it

./: .taplo.toml  Cargo.toml  README.md  fuck-delete-it.json  rustfmt.toml
.github/workflows/: publish.yml  release.yml
docs/: README.zh-CN.md
src/: cli.rs  main.rs
