[package]
name = "fuck-delete-it"
version = "0.1.0"
edition = "2021"
authors = ["lxl66566 <lxl66566@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["delete", "windows"]
readme = "README.md"
repository = "https://github.com/lxl66566/fuck-delete-it"
homepage = "https://github.com/lxl66566/fuck-delete-it"
documentation = "https://github.com/lxl66566/fuck-delete-it"
categories = ["filesystem"]
description = "Force delete file/folder on Windows, kill occupying processes."


[[bin]]
name = "fdi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dinvoke_rs = "0.1.4"

[dependencies.windows]
version = "0.53.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Wdk_System_SystemInformation",
  "Wdk_System_Threading",
]

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
