[package]
authors       = ["lxl66566 <lxl66566@gmail.com>"]
categories    = ["filesystem"]
description   = "Force delete file/folder on Windows, kill occupying processes."
documentation = "https://github.com/lxl66566/fuck-delete-it"
edition       = "2021"
homepage      = "https://github.com/lxl66566/fuck-delete-it"
keywords      = ["delete", "windows"]
license       = "MIT"
name          = "fuck-delete-it"
readme        = "README.md"
repository    = "https://github.com/lxl66566/fuck-delete-it"
version       = "0.3.0"


[[bin]]
name = "fdi"
path = "src/main.rs"

[dependencies]
clap    = { version = "4.5", features = ["derive"] }
inquire = "0.7"
winreg  = "0.55"

[dependencies.windows]
features = [
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Wdk_System_SystemInformation",
  "Wdk_Storage_FileSystem",
]
version = "0.61"

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
